@@ -75,6 +75,9 @@
   "important" command it runs.  The printed commands should be preceded
   by a single space.
 
+* Ensure install rules do not create any installation directory where
+  nothing is to be actually installed.  See automake bug#11030.
+
 ================================================================
 = Editing automake.in and aclocal.in
 
