@@ -64,6 +64,7 @@ Christina Gratorp	christina.gratorp@gmail.com
 Claudio Fontana		sick_soul@yahoo.it
 Clifford Wolf		clifford@clifford.at
 Dagobert Michelsen	dam@opencsw.org
+Daiki Ueno		ueno@unixuser.org
 Dalibor Topic		robilad@kaffe.org
 danbp			danpb@nospam.postmaster.co.uk
 Daniel Jacobowitz	drow@false.org
