@@ -1,6 +1,5 @@
 ## automake - create Makefile.in from Makefile.am
-## Copyright (C) 1996, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005, 2006,
-## 2007, 2008, 2009, 2010 Free Software Foundation, Inc.
+## Copyright (C) 1996-2012 Free Software Foundation, Inc.
 
 ## This program is free software; you can redistribute it and/or modify
 ## it under the terms of the GNU General Public License as published by
@@ -90,11 +89,15 @@ install-%DIR%LISP: $(%DIR%_LISP) $(ELCFILES)
 	@$(NORMAL_INSTALL)
 ## Do not install anything if EMACS was not found.
 	@if test "$(EMACS)" != no && test -n "$(%NDIR%dir)"; then \
-	  $(MKDIR_P) "$(DESTDIR)$(%NDIR%dir)"; \
 ?!BASE?	  $(am__vpath_adj_setup) \
 ## Funny invocation because Makefile variable can be empty, leading to
 ## a syntax error in sh.
-	  list='$(%DIR%_LISP)'; for p in $$list; do \
+	  list='$(%DIR%_LISP)'; \
+	  if test -n "$$list"; then \
+	    echo " $(MKDIR_P) '$(DESTDIR)$(%NDIR%dir)'"; \
+	    $(MKDIR_P) "$(DESTDIR)$(%NDIR%dir)" || exit 1; \
+	  fi; \
+	  for p in $$list; do \
 ## A lisp file can be in the source directory or the build directory.
 	    if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
 	    %BASE?$(am__strip_dir):$(am__vpath_adj)% \
