@@ -30,9 +30,10 @@ END
 : > bar
 
 cat > Makefile.am << 'END'
+pkglibexec_SCRIPTS =
 if ENABLE_FOO
 pkgdata_DATA = foo
-pkglibexec_SCRIPTS = bar
+pkglibexec_SCRIPTS += bar
 endif
 END
 
