@@ -48,8 +48,11 @@ cwd=`pwd` || Exit 1
 ./configure --prefix="$cwd/_inst"
 $MAKE
 $MAKE install
-ls -l . _inst/java # For debugging.
+ls -l .
 find . -name '*.class' | grep . && Exit 1
+# If we have nothing to install, we shouldn't create any installation
+# directory.  Related to automake bug#11030.
+test ! -d _inst
 $MAKE uninstall
 $MAKE distcheck
 
