@@ -464,7 +464,8 @@ instdat2.test \
 instdir.test \
 instdir2.test \
 instdir-cond.test \
-instdir-empty.test \
+instdir-cond2.test \
+instdir-no-empty.test \
 instdir-java.test \
 instdir-lisp.test \
 instdir-ltlib.test \
