@@ -171,6 +171,17 @@ Bugs fixed in 1.11.0a:
 
 * Long-standing bugs:
 
+  - An empty declaration of a "foo_PRIMARY" don't cause anymore the
+    generated install rules to create an empty $(foodir) directory;
+    for example, if Makefile.am contains something like:
+
+      pkglibexec_SCRIPTS =
+      if FALSE
+      pkglibexec_SCRIPTS += bar.sh
+      endif
+
+    the $(pkglibexec) directory will not be created upon "make install".
+
   - It is now possible for a foo_SOURCES variable to hold Vala sources
     together with C header files, as well as with sources and headers for
     other supported languages (e.g., C++).  Previously, only mixing C and
